<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/normal_margin">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:paddingStart="@dimen/normal_margin"
            android:paddingLeft="@dimen/normal_margin"
            android:paddingEnd="@dimen/normal_margin"
            android:paddingRight="@dimen/normal_margin"
            tools:context=".ui.detail.EmployeeDetailFragment">

            <TextView
                android:id="@+id/employee_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                app:layout_constraintBaseline_toBaselineOf="@+id/employee_email"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/employee_responsibilities_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/responsibilities"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photo_from_gallery" />

            <TextView
                android:id="@+id/employee_experience_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/experience"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employee_responsibilities" />

            <TextView
                android:id="@+id/employee_education_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/education"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employee_experience" />

            <TextView
                android:id="@+id/employee_personal_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/personal_info"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employee_education" />

            <TextView
                android:id="@+id/employee_role_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginTop="@dimen/medium_margin"

                android:text="@string/role"
                app:layout_constraintStart_toEndOf="@+id/employee_photo"
                app:layout_constraintTop_toBottomOf="@+id/employee_name" />

            <ImageView
                android:id="@+id/employee_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/employee_photo"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/blank_photo"
                tools:srcCompat="@drawable/blank_photo" />

            <EditText
                android:id="@+id/employee_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginTop="@dimen/medium_margin"

                android:hint="@string/enter_employee_name"
                android:inputType="text"
                android:maxLength="50"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/employee_photo"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/save_employee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/extra_large_margin"
                android:text="@string/save_employee"
                app:layout_constraintEnd_toStartOf="@+id/delete_employee"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employee_address" />

            <Button
                android:id="@+id/delete_employee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/extra_large_margin"
                android:text="@string/delete_employee"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/save_employee"
                app:layout_constraintTop_toBottomOf="@+id/employee_address" />

            <RadioGroup
                android:id="@+id/gender_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/employee_age_label"
                app:layout_constraintTop_toBottomOf="@+id/employee_age">

                <RadioButton
                    android:id="@+id/gender_male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/gender_female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/gender_other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:layout_weight="1"
                    android:text="@string/other" />
            </RadioGroup>

            <Spinner
                android:id="@+id/employee_role"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/employee_role_label"
                app:layout_constraintTop_toBottomOf="@+id/employee_name" />

            <TextView
                android:id="@+id/employee_age_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/age"
                app:layout_constraintStart_toStartOf="@+id/employee_role_label"
                app:layout_constraintTop_toBottomOf="@+id/employee_role" />

            <Spinner
                android:id="@+id/employee_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/employee_age_label"
                app:layout_constraintTop_toBottomOf="@+id/employee_role" />

            <ImageButton
                android:id="@+id/photo_from_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:contentDescription="@string/take_photo_from_camera"
                android:src="@android:drawable/ic_menu_camera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employee_photo" />

            <ImageButton
                android:id="@+id/photo_from_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:contentDescription="@string/pick_photo_from_gallery"
                android:src="@android:drawable/ic_menu_gallery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photo_from_camera" />

            <EditText
                android:id="@+id/employee_responsibilities"
                android:layout_width="372dp"
                android:layout_height="67dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:ems="10"
                android:inputType="textMultiLine|textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employee_responsibilities_label" />

            <EditText
                android:id="@+id/employee_experience"
                android:layout_width="376dp"
                android:layout_height="43dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:ems="10"
                android:inputType="textMultiLine|textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employee_experience_label" />

            <EditText
                android:id="@+id/employee_education"
                android:layout_width="376dp"
                android:layout_height="59dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:ems="10"
                android:inputType="textMultiLine|textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employee_education_label" />

            <TextView
                android:id="@+id/employee_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employee_personal_label" />

            <EditText
                android:id="@+id/employee_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                app:layout_constraintBaseline_toBaselineOf="@+id/employee_phone_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/employee_email" />

            <EditText
                android:id="@+id/employee_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/employee_address_label"
                app:layout_constraintTop_toBottomOf="@+id/employee_phone" />

            <TextView
                android:id="@+id/employee_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employee_email" />

            <EditText
                android:id="@+id/employee_address"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employee_address_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <include layout="@layout/list_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.Toolbar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>